--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Hello Test!</h1>
-  <script src="dist/main.js"></script>
+  <script src="dist/app.js"></script>
 </body>
 </html>
